# parquet_ops

./: .gitignore  Cargo.toml  README.md  tmp
examples/: emain.rs  merge.rs  metadata.rs  paths.rs  read.rs  read_s3.rs  sort.rs  write_2NO.rs  write_2NO_s3.rs
src/: barrier.rs  code.rs  legacy.rs  lib.rs  main.rs  merge.rs  metadata.rs  object_size.rs  old_main.rs  parquet_reader.rs  parquet_writer.rs  parquetwriter.rs  rowiterext.rs  rowwritebuffer.rs  rowwriter.rs  rp_rowiter.rs  sort.rs  test_writer.rs  testdata_writer.rs  ttypes.rs  writer.rs
src/rowwritebuffer/: rowwriter.rs
src/sort/: parquet_key.rs  partition.rs  sort_algo.rs
