[package]
name = "parquet_exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
parquet = { version = "23", features = ["async"] }
#arrow = { path = "../arrow", version = "25.0.0", optional = true, default-features = false, features = ["ipc"] }
arrow = { version = "25.0.0" }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "io-util", "fs"] }
futures = "0.3"
chrono = "0.4.23"
