[package]
name = "parquet_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { version = "30", features = ["async"] }
tokio = { version = "1.0", default-features = false, features = ["process"] }
chrono = "0.4.23"
async_bridge = { git = "https://github.com/cvkem/async_bridge.git"}
s3_file = { git = "https://github.com/cvkem/s3_file", branch = "Arc-mutex-async-exp" }
itertools = "0.10.5"
